@@ -2,137 +2,107 @@ package net.minecraft.client;
 
 import com.google.common.collect.HashBasedTable;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
-import com.google.common.collect.Maps;
 import com.google.common.collect.Table;
 import com.google.common.collect.ImmutableList.Builder;
-import com.mojang.logging.LogUtils;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.OptionalInt;
+import java.util.Set;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.gui.screens.recipebook.RecipeCollection;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.client.gui.screens.recipebook.SearchRecipeBookCategory;
 import net.minecraft.stats.RecipeBook;
-import net.minecraft.world.item.crafting.AbstractCookingRecipe;
-import net.minecraft.world.item.crafting.CookingBookCategory;
-import net.minecraft.world.item.crafting.CraftingRecipe;
-import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeHolder;
-import net.minecraft.world.item.crafting.RecipeType;
-import org.slf4j.Logger;
+import net.minecraft.world.item.crafting.BasicRecipeBookCategory;
+import net.minecraft.world.item.crafting.RecipeBookCategory;
+import net.minecraft.world.item.crafting.display.RecipeDisplayEntry;
+import net.minecraft.world.item.crafting.display.RecipeDisplayId;
 
 @Environment(EnvType.CLIENT)
 public class ClientRecipeBook extends RecipeBook {
-	private static final Logger LOGGER = LogUtils.getLogger();
-	private Map<RecipeBookCategories, List<RecipeCollection>> collectionsByTab = ImmutableMap.of();
-	private List<RecipeCollection> allCollections = ImmutableList.of();
+	private final Map<RecipeDisplayId, RecipeDisplayEntry> known = new HashMap();
+	private final Set<RecipeDisplayId> highlight = new HashSet();
+	private Map<RecipeBookCategory, List<RecipeCollection>> collectionsByTab = Map.of();
+	private List<RecipeCollection> allCollections = List.of();
 
-	public void setupCollections(Iterable<RecipeHolder<?>> iterable, RegistryAccess registryAccess) {
-		Map<RecipeBookCategories, List<List<RecipeHolder<?>>>> map = categorizeAndGroupRecipes(iterable);
-		Map<RecipeBookCategories, List<RecipeCollection>> map2 = Maps.<RecipeBookCategories, List<RecipeCollection>>newHashMap();
+	public void add(RecipeDisplayEntry recipeDisplayEntry) {
+		this.known.put(recipeDisplayEntry.id(), recipeDisplayEntry);
+	}
+
+	public void remove(RecipeDisplayId recipeDisplayId) {
+		this.known.remove(recipeDisplayId);
+		this.highlight.remove(recipeDisplayId);
+	}
+
+	public boolean willHighlight(RecipeDisplayId recipeDisplayId) {
+		return this.highlight.contains(recipeDisplayId);
+	}
+
+	public void removeHighlight(RecipeDisplayId recipeDisplayId) {
+		this.highlight.remove(recipeDisplayId);
+	}
+
+	public void addHighlight(RecipeDisplayId recipeDisplayId) {
+		this.highlight.add(recipeDisplayId);
+	}
+
+	public void rebuildCollections() {
+		Map<BasicRecipeBookCategory, List<List<RecipeDisplayEntry>>> map = categorizeAndGroupRecipes(this.known.values());
+		Map<RecipeBookCategory, List<RecipeCollection>> map2 = new HashMap();
 		Builder<RecipeCollection> builder = ImmutableList.builder();
 		map.forEach(
-			(recipeBookCategories, list) -> map2.put(
-					recipeBookCategories,
-					(List)list.stream().map(listx -> new RecipeCollection(registryAccess, listx)).peek(builder::add).collect(ImmutableList.toImmutableList())
+			(basicRecipeBookCategory, list) -> map2.put(
+					basicRecipeBookCategory, (List)list.stream().map(RecipeCollection::new).peek(builder::add).collect(ImmutableList.toImmutableList())
 				)
 		);
-		RecipeBookCategories.AGGREGATE_CATEGORIES
-			.forEach(
-				(recipeBookCategories, list) -> map2.put(
-						recipeBookCategories,
-						(List)list.stream()
-							.flatMap(recipeBookCategoriesx -> ((List)map2.getOrDefault(recipeBookCategoriesx, ImmutableList.of())).stream())
-							.collect(ImmutableList.toImmutableList())
-					)
+
+		for (SearchRecipeBookCategory searchRecipeBookCategory : SearchRecipeBookCategory.values()) {
+			map2.put(
+				searchRecipeBookCategory,
+				(List)searchRecipeBookCategory.includedCategories()
+					.stream()
+					.flatMap(basicRecipeBookCategory -> ((List)map2.getOrDefault(basicRecipeBookCategory, List.of())).stream())
+					.collect(ImmutableList.toImmutableList())
 			);
-		this.collectionsByTab = ImmutableMap.copyOf(map2);
+		}
+
+		this.collectionsByTab = Map.copyOf(map2);
 		this.allCollections = builder.build();
 	}
 
-	private static Map<RecipeBookCategories, List<List<RecipeHolder<?>>>> categorizeAndGroupRecipes(Iterable<RecipeHolder<?>> iterable) {
-		Map<RecipeBookCategories, List<List<RecipeHolder<?>>>> map = Maps.<RecipeBookCategories, List<List<RecipeHolder<?>>>>newHashMap();
-		Table<RecipeBookCategories, String, List<RecipeHolder<?>>> table = HashBasedTable.create();
+	private static Map<BasicRecipeBookCategory, List<List<RecipeDisplayEntry>>> categorizeAndGroupRecipes(Iterable<RecipeDisplayEntry> iterable) {
+		Map<BasicRecipeBookCategory, List<List<RecipeDisplayEntry>>> map = new HashMap();
+		Table<BasicRecipeBookCategory, Integer, List<RecipeDisplayEntry>> table = HashBasedTable.create();
 
-		for (RecipeHolder<?> recipeHolder : iterable) {
-			Recipe<?> recipe = recipeHolder.value();
-			if (!recipe.isSpecial() && !recipe.placementInfo().isImpossibleToPlace()) {
-				RecipeBookCategories recipeBookCategories = getCategory(recipeHolder);
-				String string = recipe.getGroup();
-				if (string.isEmpty()) {
-					((List)map.computeIfAbsent(recipeBookCategories, recipeBookCategoriesx -> Lists.newArrayList())).add(ImmutableList.of(recipeHolder));
-				} else {
-					List<RecipeHolder<?>> list = table.get(recipeBookCategories, string);
-					if (list == null) {
-						list = Lists.<RecipeHolder<?>>newArrayList();
-						table.put(recipeBookCategories, string, list);
-						((List)map.computeIfAbsent(recipeBookCategories, recipeBookCategoriesx -> Lists.newArrayList())).add(list);
-					}
-
-					list.add(recipeHolder);
+		for (RecipeDisplayEntry recipeDisplayEntry : iterable) {
+			BasicRecipeBookCategory basicRecipeBookCategory = recipeDisplayEntry.category();
+			OptionalInt optionalInt = recipeDisplayEntry.group();
+			if (optionalInt.isEmpty()) {
+				((List)map.computeIfAbsent(basicRecipeBookCategory, basicRecipeBookCategoryx -> new ArrayList())).add(List.of(recipeDisplayEntry));
+			} else {
+				List<RecipeDisplayEntry> list = table.get(basicRecipeBookCategory, optionalInt.getAsInt());
+				if (list == null) {
+					list = new ArrayList();
+					table.put(basicRecipeBookCategory, optionalInt.getAsInt(), list);
+					((List)map.computeIfAbsent(basicRecipeBookCategory, basicRecipeBookCategoryx -> new ArrayList())).add(list);
 				}
+
+				list.add(recipeDisplayEntry);
 			}
 		}
 
 		return map;
 	}
 
-	private static RecipeBookCategories getCategory(RecipeHolder<?> recipeHolder) {
-		Recipe<?> recipe = recipeHolder.value();
-		if (recipe instanceof CraftingRecipe craftingRecipe) {
-			return switch (craftingRecipe.category()) {
-				case BUILDING -> RecipeBookCategories.CRAFTING_BUILDING_BLOCKS;
-				case EQUIPMENT -> RecipeBookCategories.CRAFTING_EQUIPMENT;
-				case REDSTONE -> RecipeBookCategories.CRAFTING_REDSTONE;
-				case MISC -> RecipeBookCategories.CRAFTING_MISC;
-			};
-		} else {
-			RecipeType<?> recipeType = recipe.getType();
-			if (recipe instanceof AbstractCookingRecipe abstractCookingRecipe) {
-				CookingBookCategory cookingBookCategory = abstractCookingRecipe.category();
-				if (recipeType == RecipeType.SMELTING) {
-					return switch (cookingBookCategory) {
-						case BLOCKS -> RecipeBookCategories.FURNACE_BLOCKS;
-						case FOOD -> RecipeBookCategories.FURNACE_FOOD;
-						case MISC -> RecipeBookCategories.FURNACE_MISC;
-					};
-				}
-
-				if (recipeType == RecipeType.BLASTING) {
-					return cookingBookCategory == CookingBookCategory.BLOCKS ? RecipeBookCategories.BLAST_FURNACE_BLOCKS : RecipeBookCategories.BLAST_FURNACE_MISC;
-				}
-
-				if (recipeType == RecipeType.SMOKING) {
-					return RecipeBookCategories.SMOKER_FOOD;
-				}
-
-				if (recipeType == RecipeType.CAMPFIRE_COOKING) {
-					return RecipeBookCategories.CAMPFIRE;
-				}
-			}
-
-			if (recipeType == RecipeType.STONECUTTING) {
-				return RecipeBookCategories.STONECUTTER;
-			} else if (recipeType == RecipeType.SMITHING) {
-				return RecipeBookCategories.SMITHING;
-			} else {
-				LOGGER.warn(
-					"Unknown recipe category: {}/{}", LogUtils.defer(() -> BuiltInRegistries.RECIPE_TYPE.getKey(recipe.getType())), LogUtils.defer(recipeHolder::id)
-				);
-				return RecipeBookCategories.UNKNOWN;
-			}
-		}
-	}
-
 	public List<RecipeCollection> getCollections() {
 		return this.allCollections;
 	}
 
-	public List<RecipeCollection> getCollection(RecipeBookCategories recipeBookCategories) {
-		return (List<RecipeCollection>)this.collectionsByTab.getOrDefault(recipeBookCategories, Collections.emptyList());
+	public List<RecipeCollection> getCollection(RecipeBookCategory recipeBookCategory) {
+		return (List<RecipeCollection>)this.collectionsByTab.getOrDefault(recipeBookCategory, Collections.emptyList());
 	}
 }
